feat: add types to remote service
