# libs/clients/bff/openapi.json
@@ -1,1 +1,167 @@
-{"openapi":"3.0.0","paths":{"/api/test":{"get":{"operationId":"AppController_getData","parameters":[],"responses":{"200":{"description":""}}}},"/api/remoteGroup":{"get":{"operationId":"RemoteGroupController_getGroups","parameters":[],"responses":{"200":{"description":"","content":{"application/json":{"schema":{"type":"array","items":{"type":"object"}}}}}}},"post":{"operationId":"RemoteGroupController_addGroup","parameters":[],"responses":{"201":{"description":""}}}},"/api/remoteGroup/{id}":{"get":{"operationId":"RemoteGroupController_getGroup","parameters":[],"responses":{"200":{"description":"","content":{"application/json":{"schema":{"type":"object"}}}}}}}},"info":{"title":"BFF API","description":"Backend For Frontend API","version":"1.0","contact":{}},"tags":[],"servers":[],"components":{"schemas":{}}}
+{
+  "openapi": "3.0.0",
+  "paths": {
+    "/api/test": {
+      "get": {
+        "operationId": "AppController_getData",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/api/remoteGroup": {
+      "get": {
+        "operationId": "RemoteGroupController_getGroups",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/AnnotatedGroup"
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "operationId": "RemoteGroupController_addGroup",
+        "parameters": [],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/AnnotatedGroupCreateDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AnnotatedGroup"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/remoteGroup/{id}": {
+      "get": {
+        "operationId": "RemoteGroupController_getGroup",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AnnotatedGroup"
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  },
+  "info": {
+    "title": "BFF API",
+    "description": "Backend For Frontend API",
+    "version": "1.0",
+    "contact": {}
+  },
+  "tags": [],
+  "servers": [],
+  "components": {
+    "schemas": {
+      "GroupTableDto": {
+        "type": "object",
+        "properties": {
+          "number": {
+            "type": "number"
+          },
+          "customerCount": {
+            "type": "number"
+          },
+          "id": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "number",
+          "customerCount",
+          "id"
+        ]
+      },
+      "AnnotatedGroup": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string"
+          },
+          "tables": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/GroupTableDto"
+            }
+          },
+          "offer": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "id",
+          "tables",
+          "offer"
+        ]
+      },
+      "TableDto": {
+        "type": "object",
+        "properties": {
+          "number": {
+            "type": "number"
+          },
+          "customerCount": {
+            "type": "number"
+          }
+        },
+        "required": [
+          "number",
+          "customerCount"
+        ]
+      },
+      "AnnotatedGroupCreateDto": {
+        "type": "object",
+        "properties": {
+          "tables": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/TableDto"
+            }
+          },
+          "offer": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "tables",
+          "offer"
+        ]
+      }
+    }
+  }
+}
